--- a/css/estilo.css
+++ b/css/estilo.css
@@ -1,4 +1,5 @@
 /** variables fuentes y paleta principal**/
+/*SALUD*/
 .notassalud {
   display: flex;
   flex-direction: row;
@@ -63,3 +64,44 @@
       background-color: #2f6048;
       color: seashell;
       font-family: "Benne", serif; }
+
+.td1, .td3, .td5 {
+  font-family: "Benne", serif;
+  color: #7fa339;
+  font-size: medium;
+  font-style: oblique; }
+
+.td2, .td4, .td6 {
+  font-family: Verdana;
+  color: seashell;
+  font-size: medium;
+  font-style: italic; }
+
+.textobusqueda, .textobusqueda--estilo {
+  display: inline;
+  font-size: 10px;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  border: 1px solid #ced4da; }
+
+.textobusqueda--estilo {
+  border-radius: 20px;
+  border-color: #7fa339;
+  width: 50%;
+  margin-left: 250px; }
+
+.botonbusqueda, .boton-estilo {
+  display: inline;
+  font-weight: 400;
+  line-height: 1.5;
+  color: seashell;
+  text-align: center;
+  font-size: 20px;
+  border-radius: 20px; }
+
+.boton-estilo {
+  background-color: #2f6048;
+  border: 1px solid #7fa339;
+  cursor: pointer; }
