--- a/css/estilo.css
+++ b/css/estilo.css
@@ -46,10 +46,10 @@
       height: auto; }
       .contenedor .card__body .card__titulo .card__intro {
         font-family: "Benne", serif;
-        color: #7fa339;
+        color: #a7b886;
         font-size: xx-small;
         font-weight: lighter;
-        color: #7fa339;
+        color: #a7b886;
         text-align: center;
         width: 100%;
         height: 150px;
@@ -67,12 +67,12 @@
 
 .td1, .td3, .td5 {
   font-family: "Benne", serif;
-  color: #7fa339;
+  color: #fdf690;
   font-size: medium;
   font-style: oblique; }
 
 .td2, .td4, .td6 {
-  font-family: Verdana;
+  font-family: "Benne", serif;
   color: seashell;
   font-size: medium;
   font-style: italic; }
@@ -81,27 +81,31 @@
   display: inline;
   font-size: 10px;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 2;
   color: #212529;
   background-color: #fff;
   border: 1px solid #ced4da; }
 
 .textobusqueda--estilo {
   border-radius: 20px;
-  border-color: #7fa339;
-  width: 50%;
-  margin-left: 250px; }
+  border-color: #a7b886;
+  width: 250px;
+  margin: 0%; }
 
 .botonbusqueda, .boton-estilo {
   display: inline;
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 2;
   color: seashell;
   text-align: center;
-  font-size: 20px;
-  border-radius: 20px; }
+  border-radius: 10px; }
 
 .boton-estilo {
   background-color: #2f6048;
-  border: 1px solid #7fa339;
-  cursor: pointer; }
+  border: 1px solid #a7b886;
+  cursor: pointer;
+  font-size: 15px;
+  padding-left: 3px;
+  padding-right: 3px; 
+  width: 51px; }
+  
