--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,8 @@
-@media screen and (min-width: 600px) {
-    body{
-        background-color:rgb(9, 124, 107);
-    }    
-  }
-  @media screen and (min-width: 800px) {
-      body{
-        background-color:rgb(9, 124, 107);
-   }    
-    }
-    @media screen and (min-width: 1200px) {
-      body{
-          background-color:rgb(9, 124, 107);
-      }    
-    }
+*{
+    padding: 0px;
+    margin: 0px;
+}
+
 /*Menu*/    
 ul{
     list-style: none;
@@ -22,26 +12,20 @@ a{
 }
 .hola{
     display: flex;
-    flex-direction: row;
-    position: relative;
     color: seashell;
     text-decoration: none;
     padding-top: 7px;
-    padding-left: 30px;
-    padding-top: 30px;
     padding-bottom: 7px;
+    margin: 0px;
     background-color: rgb(47, 96, 72);
     font-size:large;
     font-weight: bold;
     font-family: 'Benne', serif;
-    text-align: center;
-    align-items: center;
-    justify-content: space-evenly;
-    width: auto;
+    width: 100%;
 } 
 .liMenu{
-    border-top: 1px seashell solid;
-    border-radius: 3px;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 .linkcolor{
     color: seashell;
@@ -56,16 +40,19 @@ body{
     height: auto;
 }
 footer{
+    display: flex;
+    flex-direction: column;
+    margin-bottom: 0%;
     color: seashell;
     font-size:medium;
     font-style: initial;
     font-family: 'Benne', serif;
-    text-align:left;
-    line-height: unset;
-    background: linear-gradient(to bottom, rgb(47, 96, 72), white);
+    text-align:center;
+    background: linear-gradient(to right bottom, rgb(47, 96, 72), white);
     border: 2px darkgreen solid ;
-
+    width: 100%;
    }
+
 /* Tamaños de textos*/
 h1{
     color: rgb(221, 231, 221);
@@ -122,92 +109,102 @@ p{
     font-style: initial;
     font-family: 'Benne', serif;
     text-align: center;
+    margin: 0px;
+    padding: 0px;
     border-bottom: 3px darkgreen solid;
     border-top: 3px darkgreen solid;
 }
+.article{
+    text-align: left;
+    font-size: large;
+    font-weight: bold;
 
+}
 /*Home*/
 .mainPrincipal{
-    display: grid;
-    grid-template-columns: 70% 30%;
-    grid-template-rows: 2fr 2fr;
-    grid-template-areas: "area1 area3"
-                         "area2 area3";
+    
     justify-items: center;
-    background-image: url(../imagenes/losmestiz2.jpg.png);
+    background-image: url(../imagenes/losmestiz2.png);
     width: 100%;
-    height: 500px;
+    background-size: cover;
+    padding-left: 10px;
 }
 .ultimapubli{
     grid-area: area1;
     display: flex;
     flex-direction: row;
-    background-color: rgb(103, 199, 162);
-    font-family: 'Benne', serif; 
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+ 
     color: seashell;  
     width: 300px;
     height: 150px;
-    border: darkgreen 1px solid;
+    border: darkgreen 5px double;
+    border-radius: 3px;
     margin: 30px;
+    margin-top: 100px;
+    margin-left: 0px;
 }
 .lugares{
     grid-area: area2;
     display: flex;
     flex-direction: row;
-    background-color: rgb(103, 199, 162);
-    font-family: 'Benne', serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     color: seashell;
     width: 300px;
     height: 150px;
-    border:darkgreen 1px solid;
+    border: darkgreen 5px double;
+    border-radius: 3px;
     margin: 30px;
+    margin-left: 0px;
 }
 .texto1{
     width: 100px;
     height: 120px; 
-    font-size: xx-small;
+    font-size: x-small;
     text-align: center;
     padding: 3px;
-    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
     justify-content: space-evenly;
 }
 .texto2{
     width: 100px;
     height: 120px; 
-    font-size: xx-small;
+    font-size: x-small;
     text-align: center;
     padding: 3px;
-    margin: auto;
+    margin-top: 50px;
+    margin-bottom: 50px;
     justify-content: space-evenly;
 
 }
 .img1{
-    width: 30%;
-    height: 30%;
-    padding-top: 50px;
-    padding-right: 10px;
+    width: fit-content;
 }
-.img2{
-    width: 30%;
-    height: 30%;
-    padding-top: 50px;
-    padding-right: 10px;
-
-}
-.publicacion{
+.aside{
     grid-area: area3;
-    background-color: rgb(103, 199, 162);
-    font-family: 'Benne', serif;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: xx-small;
     color: seashell;
     width: 200px;
     height: 400px;
-    border:darkgreen 1px solid;
-    font-size: smaller;
+    border: darkgreen 5px double;
+    border-radius: 3px;
     margin: 30px;
-    padding: 0px;
+    margin-top: 100px;
+    padding: 3px;
     text-align: center;
-    justify-content: space-evenly;
+}
+.asidelogo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    width: 30%;
+    height: 30%;
+    margin: 35%;
+    margin-top: 5%;
+    margin-bottom: 5%;
+
 }
 
 /*Manos a la obra*/
@@ -227,7 +224,7 @@ p{
     line-height: unset;
     background-color: yellowgreen;
     border-radius: 4px;
-   }
+}
 .hacer{
     font-family: 'Benne', serif;
     color:rgb(146, 99, 99);
@@ -236,14 +233,6 @@ p{
     margin:5px;
     width: fit-content;
     height:fit-content;
-
-}
-.manosalaobraimg{
-    background-image: url(../imagenes/manosalaobra2.png);
-    align-content: center;
-    width: 100%;
-    height: 800px;
-    background-image: none;
 }
 /*Publicamos tu emprendimiento*/
 form{
@@ -254,13 +243,10 @@ form{
     padding-bottom: 20px;
     padding-left: 20px;
     padding-right: 20px;
-    margin-left: 30%;
-    margin-right: 30%;
-    margin-top: 10px;
-    margin-bottom: 10px;
+
     border:rgb(147, 170, 189) 3PX groove ;
     border-radius: 5px;
-    align-content: center;
+    justify-content: center;
 }
 
 .nombreform:hover{
@@ -277,24 +263,8 @@ form{
 .tablaagenda{
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style:oblique ;
-    margin: auto;
+    margin: 30px;
     padding: 3px;
-}
-.agendaimg{
-    background-image: url(../imagenes/agenda2.png);
-    align-content: center;
-    width: 100%;
-    height: 800px;
-    background-image: none;
-}
-/*Salud*/
-.saludimg{
-    background-image:url(../imagenes/salud.png) ;
-    background-position: center;
-    width: 100%;
-    height: 100%;
-    margin-bottom: 5px;
-    background-image: none;
 }
 /*Conocenos*/    
 .tablaconocenos{
@@ -313,70 +283,108 @@ form{
     margin: auto;
     padding: 1px;
 }
+
 .hum1{
     grid-area: area1;
-    background-color: cadetblue;
+   
+    background-color: rgb(138, 197, 204);
     color: black;
     width: fit-content;
     height:fit-content;
     text-align: center;
     padding: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 .hum2{
     grid-area: area2;
-    background-color: cadetblue;
+ 
+    background-color: rgb(138, 197, 204);
     color: black;
     width: fit-content;
     height:fit-content;
     text-align: center;
     padding: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 .can1{
     grid-area: area3;
-    background-color: cadetblue;
+
+    background-color: rgb(138, 197, 204);
     color: black;
     width: fit-content;
     height:fit-content;
     text-align: center;
     padding: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 .can2{
     grid-area: area4;
-    background-color: cadetblue;
+    
+    background-color: rgb(138, 197, 204);
     color: black;
     width: fit-content;
     height:fit-content;
     text-align: center;
     padding: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 .can3{
     grid-area: area5;
-    background-color: cadetblue;
+
+    background-color: rgb(138, 197, 204);
     color: black;
     width: fit-content;
     height:fit-content;
     text-align: center;
     padding: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 .can4{
     grid-area: area6;
-    background-color: cadetblue;
+    
+    background-color: rgb(138, 197, 204);
     color: black;
     width: fit-content;
     height:fit-content;
     text-align: center;
     padding: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
 }
 .can5{
     grid-area: area8;
-    background-color: cadetblue;
+    
+    flex-direction: row;
+    background-color: rgb(138, 197, 204);
     color: black;
     width: fit-content;
     height:fit-content;
     text-align: center;
     padding: 7px;
+    margin-left: 5px;
+    margin-right: 5px;
+    border-radius: 5px;
+}
+#subrayadocolor{
+    color: #3d6f57;
+    font-size: small;
+    font-weight: normal;
+    font-style: normal;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 .todos{
+    grid-area: area7;
     width: 180px;
     height: 180px;
     animation-name: integrantes;
@@ -431,10 +439,7 @@ form{
 
 /*Productos*/
 .producto{
-    display: grid;
-    grid-template-columns: 2fr 2fr 2fr 2fr;
-    grid-template-rows: 2fr 2fr 2fr;
-    grid-auto-flow: row;
+
     justify-items: center;
     width: 100%;
     height: 800px;
@@ -444,3 +449,88 @@ form{
     width: 45%;
     height: 45%;
 }
+
+@media only screen and (min-width: 1400px) {
+    .mainprincipal-media{
+      display: grid;
+      grid-template-columns: 70% 30%;
+      grid-template-rows: 2fr 2fr;
+      grid-template-areas: "area1 area3"
+                           "area2 area3";
+    }   
+    .producto-media{
+        display: grid;
+        grid-template-columns: 2fr 2fr 2fr;
+        grid-template-rows: 2fr 2fr 2fr;
+        grid-auto-flow: row;
+    }
+}    
+@media only screen and (min-width: 692px) {
+    .mainprincipal-media{
+        display: grid;
+        grid-template-columns: 70% 30%;
+        grid-template-rows: 2fr 2fr;
+        grid-template-areas: "area1 area3"
+                             "area2 area3";
+        }  
+    .producto-media{
+        display: grid;
+        grid-template-columns: 2fr 2fr 2fr;
+        grid-template-rows: 2fr 2fr 2fr;
+        }  
+      }
+@media only screen and (max-width: 691px) {
+    *{
+        margin: 0px;
+        padding: 0px;
+        }
+    .ultimapubli, .lugares, .aside{
+        display: row;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: auto;
+        padding-right: auto;
+        }  
+    .producto-media{
+           display: grid;
+           grid-template-columns: 2fr 2fr;
+           grid-template-rows: 2fr 2fr 2fr 2fr;
+        }   
+    .tablaconocenos-media{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 25% 25% 25% 25%;
+        grid-template-areas: "area1 area2"
+                             "area3 area4"
+                             "area5 area6"
+                             "area7 area8";
+        }
+  } 
+@media only screen and (max-width: 576px) {
+    *{
+        margin: 0px;
+        padding: 0px;
+    }
+    .ultimapubli, .lugares, .aside{
+        display: row;
+        margin-left: auto;
+        margin-right: auto;
+        padding-left: auto;
+        padding-right: auto;
+        } 
+    .producto-media{
+        display: grid;
+        grid-template-columns: 2fr 2fr;
+        grid-template-rows: 2fr 2fr 2fr 2fr;
+        }
+    .tablaconocenos-media{
+        display: grid;
+        grid-template-columns: 50% 50%;
+        grid-template-rows: 25% 25% 25% 25%;
+        grid-template-areas: "area1 area2"
+                             "area3 area4"
+                             "area5 area6"
+                             "area7 area8";
+        justify-items: center
+        }     
+    }
