--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -1,7 +1,9 @@
 /** variables fuentes y paleta principal**/
 $backgroun_fondos_body: rgb(9, 124, 107);
 $backgroun_fondos_nav_footer: rgb(47, 96, 72);
-$font_color: rgb(127, 163, 57);
+$font_color: rgb(167, 184, 134);
+$font_color_claro:seashell ;
+$font_color_amarrillo: rgb(253, 246, 144);
 $backgroun_fondos_section_aside: rgb(103, 199, 162);
 $backgroun_fondos_contenedores: rgb(138, 197, 204);
 $font_pricipal: 'Benne', serif;
@@ -93,18 +95,19 @@ $font_pricipal: 'Benne', serif;
     font-style: $fuenteestilo;   
 }
 .td1, .td3 , .td5 {
-    @include textotabla( $font_pricipal, $font_color, medium, oblique)
+    @include textotabla( $font_pricipal, $font_color_amarrillo, medium, oblique)
 }
 .td2, .td4, .td6{
-    @include textotabla( Verdana, seashell, medium, italic)
+    @include textotabla( $font_pricipal, seashell, medium, italic)
 }
 
 ////*Extend///
+//*Agenda//
 .textobusqueda {
     display: inline;
     font-size: 10px;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 2;
     color: #212529;
     background-color: #fff;
     border: 1px solid #ced4da;
@@ -113,22 +116,27 @@ $font_pricipal: 'Benne', serif;
     @extend .textobusqueda;
     border-radius: 20px;
     border-color: $font_color;
-    width: 50%;
-    margin-left: 250px;
+    width: 250px;
+    margin: 0%;
+    
 
 }
 .botonbusqueda {
     display: inline;
     font-weight: 400;
-    line-height: 1.5;
+    line-height: 2;
     color: seashell;
     text-align: center; 
-    font-size: 20px;
-    border-radius: 20px;
+    
+    border-radius: 10px;
   }
   .boton-estilo{
       @extend .botonbusqueda;
       background-color: $backgroun_fondos_nav_footer;
       border: 1px solid $font_color;
       cursor: pointer;
+      font-size: 15px;
+      padding-left: 3px;
+      padding-right: 3px;
+      width: 51px;
   }
