--- a/scss/estilo.scss
+++ b/scss/estilo.scss
@@ -40,6 +40,7 @@ $font_pricipal: 'Benne', serif;
             justify-content: space-evenly;
             .card__image{
                 border-radius: 15px;
+                padding: 3px;
             }
         }
     } 
